# AI-research-assistant

./: README.md  pdf_summarizer.py  pyproject.toml  scraper.py
docs/: AI_Research_Assistant.md
pdfs/: summaries_20250324_1148.txt  summaries_20250324_1203.txt  summaries_20250506_1248.txt
src/: app.py  config.py
src/services/: arxiv_service.py  summarizer.py
src/static/: scripts.js  style.css
src/templates/: index.html  layout.html
