[tool.poetry]
name = "ai-research-assistant"
version = "0.1.0"
description = ""
authors = ["Teemu Ruokokoski <teemu.ruokokoski@helsinki.fi>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
langchain = "^0.3.21"
openai = "^1.68.2"
langchain-openai = "^0.3.9"
langchain-community = "^0.3.20"
pymupdf = "^1.25.4"
playwright = "^1.51.0"
playwright-stealth = "^1.0.6"
flask = "^3.1.0"
tiktoken = "^0.9.0"
dotenv = "^0.9.9"
cobra = {extras = ["test"], version = "^0.29.1"}
setuptools = "^80.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
